kgtkr/anontown/camo.yaml
apiVersion: v1
kind: Service
metadata:
  name: camo
spec:
  ports:
    - port: 4181
      targetPort: 8080
  selector:
    app.kubernetes.io/name: camo
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: camo
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: camo
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: camo
    spec:
      nodeSelector:
        kubernetes.io/arch: amd64
      containers:
        - image: arachnysdocker/go-camo:2.3.1
          name: camo
          resources:
            requests:
              cpu: "10m"
              memory: "50Mi"
      restartPolicy: Always
