kgtkr/anontown/client.yaml
apiVersion: v1
kind: Service
metadata:
  name: client
spec:
  ports:
    - port: 3000
  selector:
    app.kubernetes.io/name: client
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: client
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: client
    spec:
      containers:
        - image: ghcr.io/kgtkr/anontown-client:20260906090551950-99beb68
          name: client
          resources:
            requests:
              cpu: "10m"
              memory: "100Mi"
      restartPolicy: Always
