kgtkr/anontown/faktory.yaml
apiVersion: v1
kind: Service
metadata:
  name: faktory
spec:
  ports:
    - port: 7419
      name: faktory
    - port: 7420
      name: dashboard
  selector:
    app.kubernetes.io/name: faktory
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: faktory
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: faktory
  serviceName: faktory
  template:
    metadata:
      labels:
        app.kubernetes.io/name: faktory
    spec:
      containers:
        - image: contribsys/faktory:1.10.0
          name: faktory
          resources:
            requests:
              cpu: "10m"
              memory: "10Mi"
          volumeMounts:
            - mountPath: /var/lib/faktory/db
              name: faktory-data
              subPath: data
      restartPolicy: Always
      volumes:
        - name: faktory-data
          persistentVolumeClaim:
            claimName: faktory-data
