kgtkr/anontown/postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
spec:
  ports:
    - port: 5432
  selector:
    app.kubernetes.io/name: postgres
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres14
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: postgres
  serviceName: postgres
  template:
    metadata:
      labels:
        app.kubernetes.io/name: postgres
    spec:
      containers:
        - env:
            - name: POSTGRES_PASSWORD
              value: postgres
          image: postgres:14.15-alpine3.19
          name: postgres
          resources:
            requests:
              cpu: "20m"
              memory: "50Mi"
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgres-data
              subPath: data
          livenessProbe:
            exec:
              command:
                - pg_isready
                - -U
                - postgres
      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: postgres14-data
      restartPolicy: Always
