kgtkr/anontown/server.yaml
apiVersion: v1
kind: Service
metadata:
  name: server
spec:
  ports:
    - port: 8080
  selector:
    app.kubernetes.io/name: server
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: server
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: server
    spec:
      containers:
        - image: ghcr.io/kgtkr/anontown-server:20260906090735412-b6e1b18
          name: server
          resources:
            requests:
              cpu: "10m"
              memory: "100Mi"
      restartPolicy: Always
