kgtkr/anontown/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    cert-manager.io/cluster-issuer: letsencrypt-issuer
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - anontown.com
        - api.anontown.com
        - camo.anontown.com
        - document.anontown.com
      secretName: ingress-cert
  rules:
    - host: camo.anontown.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: camo
                port:
                  number: 4181
    - host: anontown.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: client
                port:
                  number: 3000
    - host: document.anontown.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: doc
                port:
                  number: 4928
    - host: api.anontown.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: server
                port:
                  number: 8080
